--- a/cantina-app-service/pom.xml
+++ b/cantina-app-service/pom.xml
@@ -76,7 +76,10 @@
 		    <artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
         
-        
+        <dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-java8</artifactId>
+		</dependency>
         
 	</dependencies>
 
